# civitai-mcp

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
docs/: BUGFIX_CONTENT_TYPE.md  DEBUGGING.md  DEBUGGING_WORKFLOW.md  ENVIRONMENT_SETUP.md  PROJECT_STRUCTURE.md  README.md  REFACTORING.md  SIMPLIFIED_ARCHITECTURE.md  development.roadmap.md  implementation.plan.md  planning.overview.md  project.structure.md  quickstart.md  requirements.md
docs/architecture/: DIAGRAMS.md  FILE_TREE.md  PROPOSED_ARCHITECTURE.md
scripts/: debug_with_inspector.sh  quick_debug.sh  run_api.sh  run_mcp.sh
src/api/: dependencies.py  main.py
src/api/routes/: health.py  images.py
src/contracts/: requests.py  responses.py
src/core/config/: settings.py
src/core/services/: civitai_service.py
src/mcp/: main.py  server.py
tests/: mcp_test_cases.json
tests/unit/: test_mcp_server.py
